Fixed layout, scrollbar on logo and info section max-width and centered

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ a {
 }
 
 .header-section {
-    height: 325px;
+    height: 340px;
     color: hsl(0, 0%, 85%);
     display: flex;
     flex-direction: column;
@@ -196,48 +196,26 @@ a {
     flex-direction: column;
 }
 
-/* info section */
-
-.info-section {
-    display: flex;
-    justify-content: center;
-}
-
-.info-containers {
-    padding: 1rem 0 3rem 16px;
-    color: hsl(0, 0%, 85%);
-    max-width: 1200px;
-    width: 100%;
-}
-
-.links {
-    display: flex;
-    align-items: center;
-    padding: 0 0 4px 0;
-}
-
-.wrapper {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 0 1rem 3rem 1rem;
-}
-
 /* INFO SECTION */
 
 .info-section {
     display: flex;
-    flex: 0;
     flex-direction: column;
-    padding: 16px;
-    color: hsl(0, 0%, 85%)
+    flex: 0;
+    color: hsl(0, 0%, 85%);
+    align-items: center;
+}
+
+#in-progress-title { text-align: left; max-width: 1200px; width: 100%; 
+    padding: 10px 0 0 20px;
 }
 
 .cards-section {
     display: flex;
     min-height: 300px;
-    gap: 1rem;
     flex-wrap: wrap;
+    max-width: 1200px;
+    width: 100%;
 }
 
 .cards-in-progress {
@@ -246,6 +224,7 @@ a {
     flex: 1;
     min-width: 300px;
     padding-bottom: 22px;
+    margin: 16px;
 }
 
 .in-progress-header {
@@ -264,6 +243,7 @@ a {
     flex: 1;
     min-width: 300px;
     padding-bottom: 22px;
+    margin: 16px;
 }
 
 .completed-header {
